@@ -456,6 +456,7 @@ gboolean vips_image_isMSBfirst( VipsImage *image );
 gboolean vips_image_isfile( VipsImage *image );
 gboolean vips_image_ispartial( VipsImage *image );
 
+VipsImage *vips_image_copy_memory( VipsImage *image );
 int vips_image_wio_input( VipsImage *image );
 int vips_image_pio_input( VipsImage *image );
 int vips_image_pio_output( VipsImage *image );
